[gd_scene load_steps=7 format=3 uid="uid://df2ya0uji0y7j"]

[ext_resource type="Theme" uid="uid://ctglmnnwqwbq4" path="res://assets/theme/hud.tres" id="1_edsi1"]
[ext_resource type="Script" uid="uid://b0v3tbwkw2asb" path="res://ui/hud/hud_overlay.gd" id="2_7dvlo"]
[ext_resource type="Script" uid="uid://n0cmt74v5vsc" path="res://ui/hud/components/info_bar/info_bar.gd" id="3_t7oj4"]
[ext_resource type="Script" uid="uid://xvw5unpybtr6" path="res://ui/hud/components/notification/notification_area.gd" id="4_ov4ut"]
[ext_resource type="Texture2D" uid="uid://cl2cxrvb68mpl" path="res://assets/image/icon/camera.png" id="4_t7oj4"]
[ext_resource type="Script" uid="uid://cdw6orywl6kp0" path="res://ui/hud/components/city_list/city_list.gd" id="5_7dvlo"]

[node name="HUDOverlay" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_edsi1")
theme_override_constants/separation = 8
script = ExtResource("2_7dvlo")

[node name="InfoBar" type="PanelContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("3_t7oj4")
metadata/_custom_type_script = "uid://n0cmt74v5vsc"

[node name="MarginInner" type="MarginContainer" parent="InfoBar"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="ComponentStack" type="HBoxContainer" parent="InfoBar/MarginInner"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 32

[node name="LabelLocation" type="Label" parent="InfoBar/MarginInner/ComponentStack"]
unique_name_in_owner = true
layout_mode = 2
text = "NO_LOCATION"

[node name="LabelFPS" type="Label" parent="InfoBar/MarginInner/ComponentStack"]
unique_name_in_owner = true
layout_mode = 2
text = "00 fps"

[node name="Camera" type="HBoxContainer" parent="InfoBar/MarginInner/ComponentStack"]
layout_mode = 2

[node name="CameraDevMode" type="CheckButton" parent="InfoBar/MarginInner/ComponentStack/Camera"]
unique_name_in_owner = true
layout_mode = 2
icon = ExtResource("4_t7oj4")

[node name="CameraZoom" type="Label" parent="InfoBar/MarginInner/ComponentStack/Camera"]
unique_name_in_owner = true
layout_mode = 2
text = "0.000x"

[node name="LabelClock" type="Label" parent="InfoBar/MarginInner/ComponentStack"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
text = "1970-01-01T00:00:00"

[node name="NotificationArea" type="ScrollContainer" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(416, 192)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
script = ExtResource("4_ov4ut")
metadata/_custom_type_script = "uid://xvw5unpybtr6"

[node name="MarginInner" type="MarginContainer" parent="NotificationArea"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="AlertStack" type="VBoxContainer" parent="NotificationArea/MarginInner"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 10

[node name="CityList" type="PanelContainer" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 2
script = ExtResource("5_7dvlo")
metadata/_custom_type_script = "uid://cdw6orywl6kp0"

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/CityList"]
layout_mode = 2

[node name="SourceCity" type="OptionButton" parent="HBoxContainer/CityList/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
selected = 0
item_count = 1
popup/item_0/text = "SOURCE"
popup/item_0/id = 0
popup/item_0/separator = true

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/CityList/VBoxContainer"]
layout_mode = 2

[node name="DestCity" type="OptionButton" parent="HBoxContainer/CityList/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
selected = 0
item_count = 1
popup/item_0/text = "DESTINATION"
popup/item_0/id = 0
popup/item_0/separator = true

[node name="Teleport" type="Button" parent="HBoxContainer/CityList/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "TELEPORT"

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8

[node name="ButtonSave" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "SAVE"

[node name="ButtonLoad" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "LOAD"

[node name="ButtonPause" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
toggle_mode = true
text = "PAUSE"

[node name="ButtonQuit" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "QUIT"
